...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Home-->
        <scene sceneID="oQi-VZ-FoL">
            <objects>
                <viewController storyboardIdentifier="home" useStoryboardIdentifierAsRestorationIdentifier="YES" id="zZR-dW-949" userLabel="Home" customClass="HomeController" customModule="NavigationControllerAsMenu" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="gxo-uU-jls"/>
                        <viewControllerLayoutGuide type="bottom" id="DUZ-Ay-Q9Q"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="pVF-P6-whY">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="pAE-N1-ety" userLabel="Layout">
                                <rect key="frame" x="20" y="64" width="560" height="536"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S85-br-Q9c">
                                        <rect key="frame" x="219.5" y="0.0" width="121.5" height="178.5"/>
                                        <accessibility key="accessibilityConfiguration" label="homeViewTitle"/>
                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hbb-E8-nwS" userLabel="First paragraph">
                                        <rect key="frame" x="3" y="178.5" width="554.5" height="179"/>
...
            </objects>
            <point key="canvasLocation" x="1633" y="752"/>
        </scene>
        <!--News-->
        <scene sceneID="dwE-uF-8qx">
            <objects>
                <viewController storyboardIdentifier="news" useStoryboardIdentifierAsRestorationIdentifier="YES" id="U0d-Vq-Md1" userLabel="News" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="m19-4S-aJS"/>
                        <viewControllerLayoutGuide type="bottom" id="jWT-Fg-VUs"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="czK-Ie-YI1">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ba-co-6UU">
                                <rect key="frame" x="244" y="271.5" width="112.5" height="57.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="newsViewTitle"/>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
...
            </objects>
            <point key="canvasLocation" x="654" y="1612"/>
        </scene>
        <!--Contact-->
        <scene sceneID="ugQ-Il-UwN">
            <objects>
                <viewController storyboardIdentifier="contact" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Be1-67-KU9" userLabel="Contact" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="A5Z-sa-X9d"/>
                        <viewControllerLayoutGuide type="bottom" id="tsU-Xa-xDr"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Cmj-dE-cZ0">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CQS-nD-lDY">
                                <rect key="frame" x="221" y="271.5" width="159" height="57.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="contactViewTitle"/>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
...
            </objects>
            <point key="canvasLocation" x="38" y="1612"/>
        </scene>
        <!--Menu-->
        <scene sceneID="q2j-MG-JXF">
            <objects>
                <tableViewController storyboardIdentifier="menu" title="Menu" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ytg-g2-yUY" userLabel="Menu" customClass="MenuController" customModule="NavigationControllerAsMenu" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="54" sectionHeaderHeight="18" sectionFooterHeight="18" id="3Pw-76-c16" userLabel="Menu">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                        <inset key="separatorInset" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                        <view key="tableHeaderView" contentMode="scaleToFill" id="Vvb-2F-Ygx" userLabel="Header">
...
